Fix list icon alignment
The `fa-ul` and `fa-li` classes don't work well in our case, since they
make the icon as the bullet, and therefore they are not inside the
borders (funny, as soon as I started this sentence I remembered that
`list-style-position` exists. Don't know if that'll work though).

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -368,6 +368,28 @@
   border-bottom: unset;
 }
 
+/**
+ * List item with an icon to the left.
+ * 1 .Align icon with text.
+ */
+
+.list__item_iconed {
+  align-items: baseline; /* 1 */
+  display: flex; /* 1 */
+}
+
+/**
+ * 1. Some space to the left and right of icon.
+ * 2. Prevent icon from shrinking if text needs more space (i.e., make sure
+ *    icons are aligned).
+ */
+
+.list__icon {
+  flex-shrink: 0; /* 2 */
+  margin-left: .5em; /* 1 */
+  margin-right: .5em; /* 1 */
+}
+
 
 /* FEATURE BLOCKS (for the lack of a better term) */
 
